WebCore/platform/graphics/Color.h
@@ -94,6 +94,7 @@ public:
     void setRGB(RGBA32 rgb) { m_color = rgb; m_valid = true; }
     void getRGBA(float& r, float& g, float& b, float& a) const;
     void getRGBA(double& r, double& g, double& b, double& a) const;
+    void getHSL(double& h, double& s, double& l) const;
 
     Color light() const;
     Color dark() const;
