WebCore/rendering/RenderThemeChromiumLinux.h
@@ -60,6 +60,7 @@ namespace WebCore {
 
         // System fonts.
         virtual void systemFont(int propId, FontDescription&) const;
+        virtual Color systemColor(int cssValidId) const;
 
         virtual int minimumMenuListSize(RenderStyle*) const;
 
